tests/ui/derived-errors/issue-31997-1.stderr
error[E0433]: failed to resolve: use of undeclared type `HashMap`
  --> $DIR/issue-31997-1.rs:20:19
   |
LL |     let mut map = HashMap::new();
   |                   ^^^^^^^ use of undeclared type `HashMap`
   |
help: consider importing this struct
   |
LL + use std::collections::HashMap;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
